little overflow on body fix

--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ body{
   height: 100%;
   min-width:1200px;
   min-height: 600px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 ul {
